nohup.out
(node:6324) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
/Users/leon.gregori/Git/javascript-cv/src/index.js:1
import React from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
(node:6449) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
/Users/leon.gregori/Git/javascript-cv/src/index.js:1
import React from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
(node:6547) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
/Users/leon.gregori/Git/javascript-cv/src/index.js:1
import React from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
(node:6580) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
/Users/leon.gregori/Git/javascript-cv/src/index.js:1
import React from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
(node:6596) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
/Users/leon.gregori/Git/javascript-cv/src/app.js:1
import React, { Component } from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47

> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Something is already running on port 3000.

> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.


> javascript-cv@0.1.0 start /Users/leon.gregori/Git/javascript-cv
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view javascript-cv in the browser.

  Local:            http://localhost:3000/
  On Your Network:  http://192.168.0.227:3000/

Note that the development build is not optimized.
To create a production build, use npm run build.

